@@ -231,6 +231,68 @@ NODE z3
 	ICON 100 100 rbox
 	POSITION 525 425
 
+NODE centre
+    POSITION 900 100
+    LABEL C
+    ICON 128 128 images/hollow32.png
+
+NODE c1
+    POSITION centre -40 100
+    LABEL c1
+
+NODE c2
+    POSITION centre 0 100
+    LABEL c2
+
+NODE c3
+    POSITION centre 40 100
+    LABEL c3
+
+NODE rrr1
+    POSITION c1 180r90
+    ICON 16 16 images/green-ball-64.png
+
+NODE rrr2
+    POSITION c1 210r90
+    ICON 16 16 images/green-ball-64.png
+    
+NODE rrr3
+    POSITION c1 240r90
+    ICON 16 16 images/green-ball-64.png
+    
+NODE rrr4
+    POSITION c1 270r90
+    ICON 16 16 images/green-ball-64.png
+    
+NODE rrr5
+    POSITION c1 300r90
+    ICON 16 16 images/green-ball-64.png
+
+LINK rrc1
+    NODES rrr1 c1:180r20
+        OUTLINECOLOR 0 0 0
+    BWLABEL none
+
+LINK rrc2
+    NODES rrr2 c1:210r20
+        OUTLINECOLOR 0 0 0
+    BWLABEL none
+    
+LINK rrc3
+    NODES rrr3 c1:240r20
+        OUTLINECOLOR 0 0 0
+    BWLABEL none
+
+LINK rrc4
+    NODES rrr4 c1:270r20
+        OUTLINECOLOR 0 0 0
+    BWLABEL none
+    
+LINK rrc5
+    NODES rrr5 c1:300r20
+        OUTLINECOLOR 0 0 0
+    BWLABEL none
+
 NODE z1
 	ZORDER 20
 	INFOURL underneath
@@ -373,6 +435,20 @@ LINK node06240-node06247
 	ZORDER 100
 	INFOURL middle
 
+LINK aaa1
+    NODES centre:E90 c3
+    OUTLINECOLOR 0 0 0
+    BWLABEL none
+    
+LINK aaa2
+    NODES centre:270r80 c1
+    OUTLINECOLOR 0 0 0
+    BWLABEL none
+
+LINK aaa3
+    NODES centre:120r50 c2
+    OUTLINECOLOR 0 0 0
+    BWLABEL none
 
 # End of LINK section
 
