@@ -20,6 +20,8 @@
 	ADDED - Cacti plugin adds links in 'user' pages to management screen (if you are an admin)
 	ADDED - HTMLSTYLESHEET keyword allows you to specify a URL for a CSS stylesheet (CLI tool only)
 	ADDED - A few extra CSS id and class attributes, to make styling the page easier.
+        ADDED - New NODES offset type - angle+radius
+        ADDED - New NODES offset type - compass-point+percentage
 	CHANGE - Cacti plugin uses "processed" map title now (allows {} tokens in the title)
 	CHANGE - A NODE with no POSITION is not drawn, instead of drawn at 0,0. Useful for templates.
 	CHANGE - A LINK with no NODES is no longer an error. Also for templates.
